--- a/jade/index.jade
+++ b/jade/index.jade
@@ -2,7 +2,15 @@
 html(lang="Es")
 head
 	meta(charset="UTF-8")
-	title Document
+	<!--Let browser know website is optimized for mobile-->
+	meta(name="viewport", content="width=device-width, initial-scale=1.0")
+	title ALY INMOBILIARIA SAS
+	<!--Import Google Icon Font-->
+	link(href="http://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
+	<!--Import materialize.css-->
+	link(type="text/css", rel="stylesheet", href="css/materialize.min.css", media="screen,projection")
 body
-	background white
-	
+	include ../jade/nav.jade
+	<!--Import jQuery before materialize.js-->
+	script(type="text/javascript", src="https://code.jquery.com/jquery-2.1.1.min.js")
+	script(type="text/javascript", src="js/materialize.min.js")
